<resources>
    <string name="app_name">LockView</string>
    <string name="action_settings">Settings</string>

    <!-- Home View Pager Titles-->
    <string name="fragment_title_intro_image">Intro Image</string>
    <string name="fragment_title_intro_topic">Intro Topic</string>
    <string name="fragment_title_preview">Preview</string>
    <string name="fragment_title_set_color">Set Color</string>
    <string name="fragment_title_set_image">Set Image</string>
    <string name="fragment_title_set_topic">Set Topic</string>

    <!-- Intro Topic Text -->
    <string name="intro_image_button_text">Let\'s go!</string>
    <string name="intro_image_title">Prefer your own image as your lock screen?or,we will get a perfect one for you from Bing.</string>
    <string name="intro_image_title_1">USE MY OWN IMAGE</string>
    <string name="intro_image_content_1">Choose this if you would like to use the same image as your lock scren over time.In the next step we will let you pick one from your library.</string>
    <string name="intro_image_title_2">BING</string>
    <string name="intro_image_content_2">Refresh your day with a new cover photo from Bing everyday.If you choose this option, you agree that all rights belong to the repectvie owners of the iamge.</string>

    <!-- Intro Image Text -->
    <string name="intro_topic_button_text">Let\'s go!</string>
    <string name="intro_topic_title">What would you like to read in your lock screen?Select a category from below.</string>
    <string name="intro_topic_title_1">SPECIFIC TOPIC OF YOUR CHOICE</string>
    <string name="intro_topic_content_1">This option allows user tp use a specific topic of their interests.For example,if you are interested in Microsoft news,just type in Microsoft and we\'ll gather you the hottest and lastest Microsoft news.</string>
    <string name="intro_topic_title_2">GENERIC NEWS TOPIC</string>
    <string name="intro_topic_content_2">Love News,Sports or Finance?We got you covered.Choose this option if you would like to see a broader news topic</string>
    <string name="intro_topic_title_3">LANGUAGE LEARNING</string>
    <string name="intro_topic_content_3">Transform your phone to a best language learning tool.Learn a new word from a language of your choice right from the lock screen!</string>

    <!-- Set Topic Text -->
    <string name="set_topic_title">Tell us about a specific topic.We\'ll gather all news about it for you.</string>
    <string name="set_topic_hint">Type in a specific topic. e.g.Apple,UW,Google,President,Seahawk.</string>
    <string name="set_topic_explanation">LockView is not a news provider.All related news is culled from Internet.</string>
    <string name="set_topic_button_text">Preview</string>

    <!-- Preview Text -->
    <string name="preview_button_text">Great!</string>
    <string name="preview_hint">You can customize styles by tapping the preview texts.</string>

    <!-- Settings -->
    <string name="settings_title">Customize the portion of the text you chose with new color and size.</string>
    <string name="settings_title_foreground">Title Foreground</string>
    <string name="settings_content_foreground">Content Foreground</string>
    <string name="settings_title_background">Title Background</string>
    <string name="settings_content_background">Content Background</string>
    <string name="settings_title_fontzise">Title Fontsize</string>
    <string name="settings_content_fontsize">Content Fontsize</string>
    <string name="settings_button_text">Done!</string>

</resources>
