<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/intro_image_title"
        style="@style/Text.LockView.H2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:background="@color/purple"
        android:padding="15dp"
        android:text="@string/intro_image_title"
        android:textColor="@color/white"
        android:textStyle="normal" />

    <Button android:id="@+id/intro_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/lockview_button_selector"
        android:text="@string/intro_image_button_text" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/intro_image_button"
        android:layout_below="@id/intro_image_title">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/intro_image_title1"
                style="@style/Text.LockView.H2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/intro_image_title_1"
                android:textColor="@color/purple"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/intro_image_content1"
                style="@style/Text.LockView.P3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/intro_image_content_1"
                android:textColor="@color/white"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/intro_image_title2"
                style="@style/Text.LockView.H2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/intro_image_title_2"
                android:textColor="@color/purple"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/intro_image_content2"
                style="@style/Text.LockView.P3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/intro_image_content_2"
                android:textColor="@color/white"
                android:textStyle="normal" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>