<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/set_topic_title"
        style="@style/Text.LockView.H2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:background="@color/purple"
        android:padding="15dp"
        android:text="@string/set_topic_title"
        android:textColor="@color/white"
        android:textStyle="normal" />

    <Button android:id="@+id/set_topic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/lockview_button_selector"
        android:text="@string/set_topic_button_text" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/set_topic_button"
        android:layout_below="@id/set_topic_title"
        android:layout_marginTop="10dp">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/set_topic_hint"
                style="@style/Text.LockView.P3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/set_topic_title"
                android:textColor="@color/text_gray"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/set_topic_edit_text"
                style="@style/Text.LockView.P3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/set_topic_explanation"
                style="@style/Text.LockView.P3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/set_topic_explanation"
                android:textColor="@color/text_gray"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/set_topic_sample"
                style="@style/Text.LockView.P3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textStyle="normal" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>